# spdlog_lib

./: CMakeLists.txt
spdlog/: CMakeLists.txt
